# Basic-Neural-Network

./: .gitignore  CMakeLists.txt  README.md
handwritten-digits/: main.py
handwritten-digits/utils/: activation_functions.py  loss_functions.py
inc/: AI.hpp  AIHelpers.hpp  AITypes.hpp  Digit.hpp  Neuron.hpp  PNGLayerFormatter.hpp  Sample.hpp  Weight.hpp
src/: a.cpp  execute.cpp  learn.cpp  test.cpp
src/components/: AI.cpp  Digit.cpp  Neuron.cpp
variables/: alice.vars
